apps/client/src/stylesheets/style.css
@import "./boxicons-compat.css";

@font-face {
    font-family: Montserrat;
    src: url(../fonts/Montserrat-Light.ttf);
    font-weight: normal;
}

@font-face {
    font-family: Montserrat;
    src: url(../fonts/Montserrat-SemiBold.ttf);
    font-weight: bold;
}

@font-face {
    font-family: JetBrainsLight;
    src: url(../fonts/JetBrainsMono-Light.woff2) format("woff");
}

:root {
    --admonition-note-accent-color: #69c7ff;
    --admonition-tip-accent-color: #40c025;
    --admonition-important-accent-color: #9839f7;
    --admonition-caution-accent-color: #ff2e2e;
    --admonition-warning-accent-color: #e2aa03;
    --bs-body-font-family: var(--main-font-family) !important;
    --bs-body-font-weight: var(--main-font-weight) !important;
    --bs-body-color: var(--main-text-color) !important;
    --bs-body-bg: var(--main-background-color) !important;
    --ck-mention-list-max-height: 500px;
    --tn-modal-max-height: 90svh;

    --tree-item-light-theme-max-color-lightness: 50;
    --tree-item-dark-theme-min-color-lightness: 75;
}

body#trilium-app.motion-disabled *,
body#trilium-app.motion-disabled *::before,
body#trilium-app.motion-disabled *::after {
    /* Disable transitions and animations */
    transition: none !important;
    animation: none !important;
}

body#trilium-app.shadows-disabled *,
body#trilium-app.shadows-disabled *::before,
body#trilium-app.shadows-disabled *::after {
    /* Disable shadows */
    box-shadow: none !important;
}

body#trilium-app.backdrop-effects-disabled *,
body#trilium-app.backdrop-effects-disabled *::before,
body#trilium-app.backdrop-effects-disabled *::after {
    /* Disable backdrop effects */
    backdrop-filter: none !important;
}

.table {
    --bs-table-bg: transparent !important;
}

:root {
    --submenu-opening-delay: 300ms;
    --launcher-pane-size: 53px;
    --mobile-bottom-offset: calc(env(safe-area-inset-bottom) * 0.75);
    --bs-body-color: var(--main-text-color);
}

html {
    /* this fixes FF filter vs. position fixed bug: https://github.com/zadam/trilium/issues/233 */
    height: 100vh;
    overscroll-behavior: none;
}

body {
    /* Fix for CKEditor block gutter icon "stretching" body and causing scrollbar to appear after pressing enter
        on the last line of the editor. */
    position: fixed;
    width: 100vw;
    height: 100vh;
    background-color: var(--main-background-color);
    color: var(--main-text-color);
    font-family: var(--main-font-family);
    font-size: var(--main-font-size);

    --native-titlebar-foreground: var(--main-text-color);
    --native-titlebar-darwin-x-offset: 10;
    --native-titlebar-darwin-y-offset: 12;
    --launcher-pane-height: 53px;
    --tab-bar-height: 40px;
}

body.desktop .mobile-only,
body.mobile .desktop-only,
body:not(.electron) .electron-only {
    display: none !important;
}

body.mobile.context-menu-shown * {
    user-select: none !important;
    -webkit-user-select: none !important;
}

body.mobile #root-widget {
    padding-top: env(safe-area-inset-top);
}

body.mobile #root-widget.virtual-keyboard-opened #mobile-bottom-bar {
    display: none !important;
}

#mobile-bottom-bar {
    border-top: 1px solid var(--main-border-color);
    padding-bottom: var(--mobile-bottom-offset);
}

body.desktop #root-widget.horizontal-layout {
    padding-top: env(safe-area-inset-top);
    background-color: var(--launcher-pane-background-color);
}

body.desktop #root-widget.vertical-layout #launcher-pane,
body.desktop #root-widget.vertical-layout #left-pane,
body.desktop #root-widget.vertical-layout #rest-pane {
    padding-top: env(safe-area-inset-top);
}

a {
    text-decoration: none;
}

a,
a:visited,
a:hover {
    color: var(--link-color);
}

.note-list-widget a {
    text-decoration: none;
}

.note-list-widget a:hover {
    text-decoration: underline;
}

input,
select,
textarea,
.form-control,
.form-select {
    color: var(--input-text-color);
    background: var(--input-background-color);
}

.form-control:disabled {
    background-color: var(--input-background-color);
    opacity: 0.6;
}

.form-control:focus {
    color: var(--input-text-color);
    background: var(--input-background-color);
}

.form-select {
    background: var(--input-background-color)
        url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='%23ffffff' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/></svg>")
        right 0.75rem center/15px 20px no-repeat;
}

.form-text {
    color: var(--muted-text-color);
}

.form-group.disabled,
.form-checkbox.disabled {
    opacity: 0.5;
    pointer-events: none;
}

.form-group {
    margin-bottom: 15px;
}

/* Add a gap between consecutive radios / check boxes */
label.tn-radio + label.tn-radio,
label.tn-checkbox + label.tn-checkbox {
    margin-inline-start: 12px;
}

label.tn-radio input[type="radio"],
label.tn-checkbox input[type="checkbox"] {
    margin-inline-end: .5em;
}

#left-pane input,
#left-pane select,
#left-pane textarea {
    color: var(--left-pane-text-color);
    background: var(--left-pane-background-color);
}

input::placeholder,
.form-control::placeholder,
#left-pane input::placeholder {
    color: var(--muted-text-color);
}

.table thead th,
.table td,
.table th {
    /* Fix center vertical alignment of table cells */
    vertical-align: middle;
    color: var(--main-text-color);
    background: transparent;
}

.ck .todo-list__checkmark {
    top: 10px !important;
}

.modal-backdrop {
    background-color: var(--modal-backdrop-color) !important;
}

body.mobile .modal .modal-dialog {
    left: 50%;
    transform: translateX(-50%);
    width: 100%;
}

.component {
    contain: size;
}

code,
kbd,
pre,
samp {
    font-family: var(--monospace-font-family) !important;
}

.badge {
    --bs-badge-color: var(--muted-text-color);

    margin-inline-start: 8px;
    background: var(--accented-background-color);
}
/* ... */

